--- a/index.html
+++ b/index.html
@@ -1,63 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <title>AppLove</title>
   </head>
-  <body>
-    <header>
-      <div>
-        <a>Services</a>
-        <a>Work</a>
-        <a>The team</a>
+
+  <body class="container">
+    <header >
+      <div class="page-header">
+        <a class="text-uppercase item">Services</a>
+        <a class="text-uppercase item">Work</a>
+        <a class="text-uppercase item">The team</a>
+        <img src="assets/images/logo.png" alt="Logo" class="logo">
       </div>
     </header>
-    <section>
-      <div>
-        <h2>you just found an untilmate</h2>
-        <h1>We are applove from heart</h1>
-        <p>handcrafted - modern design - pixel perfect - passioned design</p>
-        <a>View services</a>
+
+    <section class="first-section">
+      <div  class="first-section-text">
+        <h2 class="text-uppercase text-1">you just found an untilmate</h2>
+        <h1 class="text-uppercase text-2">We are applove from heart</h1>
+        <p class="text-uppercase text-3">handcrafted - modern design - pixel perfect - passioned design</p>
+        <a class="text-uppercase box-services">View services</a>
       </div>
     </section>
-    <section>
-      <div>
-        <h2>Services</h2>
-        <h4>
+
+    <section class="second-section">
+      <div class="second-section-text">
+        <h2 class="text-uppercase services">Services</h2>
+        <h4 class="services-text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
-        <div>
-          <h5>user interface design</h5>
+
+        <div class="second-section-images">
+          <img src="assets/images/services-1.png" alt="Services 1" class="services-image">
+          <h5 class="text-uppercase">user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
           <h6>Usability testing</h6>
         </div>
-        <div>
-          <h5>concept and ideas</h5>
+
+        <div class="second-section-images">
+          <img src="assets/images/services-2.png" alt="Services 2" class="services-image">
+          <h5 class="text-uppercase">concept and ideas</h5>
           <h6>Conceptualization</h6>
           <h6>Digital Branding</h6>
           <h6>Product Strategy</h6>
         </div>
-        <div>
-          <h5>desing and branding</h5>
+
+        <div class="second-section-images">
+          <img src="assets/images/services-3.png" alt="Services 3" class="services-image">
+          <h5 class="text-uppercase">desing and branding</h5>
           <h6>Interaction Design</h6>
           <h6>Graphic Design</h6>
           <h6>Identity Design</h6>
         </div>
+
       </div>
     </section>
-    <section>
+
+    <section class="third-section">
       <div>
-        <h2>work</h2>
+        <h2 class="text-uppercase">work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
       </div>
     </section>
+
     <footer>
       <p>&#169; Copyright</p>
     </footer>
