new html on header

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   </head>
 
   <body class="container">
-    <header >
-      <div class="page-header">
-        <a class="text-uppercase item">Services</a>
-        <a class="text-uppercase item">Work</a>
-        <a class="text-uppercase item">The team</a>
-        <img src="assets/images/logo.png" alt="Logo" class="logo">
-      </div>
+
+    <header class="page-header">
+      <nav class="nav">
+        <ul class="nav-items">
+          <li><a class="text-uppercase nav-item">Services</a></li>
+          <li><a class="text-uppercase nav-item">Work</a></li>
+          <li><a class="text-uppercase nav-item">The team</a></li>
+          <li><img src="assets/images/logo.png" alt="Logo" class="logo"></li>
+        </ul>  
+      </nav>
     </header>
 
     <section class="first-section">
