--- a/index.html
+++ b/index.html
@@ -68,13 +68,25 @@
     </section>
 
     <section class="third-section">
-      <div>
+      <article class="third-section-text">
         <h2 class="text-uppercase">work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
-      </div>
+        <img src="assets/images/hero.png" alt="Work 1" class="hero">
+      </article>
+      <article class="images">
+        <img src="assets/images/work-1.jpg" alt="" class="work-image">
+        <img src="assets/images/work-2.jpg" alt="" class="work-image">
+        <img src="assets/images/work-3.jpg" alt="" class="work-image">
+        <img src="assets/images/work-4.jpg" alt="" class="work-image">
+        <img src="assets/images/work-5.jpg" alt="" class="work-image">
+        <img src="assets/images/work-6.jpg" alt="" class="work-image">
+        <img src="assets/images/work-7.jpg" alt="" class="work-image">
+        <img src="assets/images/work-8.jpg" alt="" class="work-image">
+        <img src="assets/images/work-9.jpg" alt="" class="work-image">
+      </article>
     </section>
 
     <footer>
