--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>AppLove</title>
   </head>
 
-  <body class="container">
+  <body>
 
+  <main class="container">
     <header class="page-header">
       <nav class="nav">
         <ul class="nav-items">
@@ -77,20 +78,47 @@
         <img src="assets/images/hero.png" alt="Work 1" class="hero">
       </article>
       <article class="images">
-        <img src="assets/images/work-1.jpg" alt="" class="work-image">
-        <img src="assets/images/work-2.jpg" alt="" class="work-image">
-        <img src="assets/images/work-3.jpg" alt="" class="work-image">
-        <img src="assets/images/work-4.jpg" alt="" class="work-image">
-        <img src="assets/images/work-5.jpg" alt="" class="work-image">
-        <img src="assets/images/work-6.jpg" alt="" class="work-image">
-        <img src="assets/images/work-7.jpg" alt="" class="work-image">
-        <img src="assets/images/work-8.jpg" alt="" class="work-image">
-        <img src="assets/images/work-9.jpg" alt="" class="work-image">
+        <article class="work">
+          <img src="assets/images/work-1.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto">nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-2.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-3.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-4.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-5.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-6.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-7.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-8.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
+        <article class="work">
+          <img src="assets/images/work-9.jpg" alt="" class="work-image">
+          <figcaption class="text-uppercase projeto" >nombre del proyecto</figcaption>
+        </article>
       </article>
     </section>
-
+  </main>
     <footer>
-      <p>&#169; Copyright</p>
+      <p class="footer">&#169; Copyright</p>
     </footer>
   </body>
 </html>
