--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="first-section">
       <div  class="first-section-text">
-        <h2 class="text-uppercase text-1">you just found an untilmate</h2>
+        <h2 class="text-uppercase text-1">you just found an ultimate</h2>
         <h1 class="text-uppercase text-2">We are applove from heart</h1>
         <p class="text-uppercase text-3">handcrafted - modern design - pixel perfect - passioned design</p>
         <a class="text-uppercase box-services">View services</a>
